<resources>
    <string name="app_name">Corona Tracker</string>
    <string name="web_url">https://www.mohfw.gov.in/</string>
    <string name="chartTitle">Corona Cases in India</string>
    <string name="active">ACTIVE</string>
    <string name="recovered">RECOVERED</string>
    <string name="death">DEATH</string>
    <string name="amount">0</string>
    <string name="delamount">+0</string>
    <string name="connectionError">Error in retrieving information from server\nPlease contact developer</string>
    <string name="total">TOTAL</string>
</resources>